# FerrisPanel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cli.yaml  config.example.yml  docker-compose.yml  makefile
.github/workflows/: clippy.yml  eslint.yml
cli/: Cargo.toml
client/: .eslintrc.json  craco.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/public/: index.html  manifest.json
client/src/: App.tsx  App.vue  index.tsx  types.d.ts
client/src/components/: Fallback.tsx  Header.tsx  Header.vue  HelloWorld.vue  LoginForm.tsx  RoundIcon.tsx  ServersList.tsx
client/src/components/SideBar/: SideBarContent.tsx
client/src/components/Sidebar/: Sidebar.tsx
client/src/components/Typography/: PageTitle.tsx  SectionTitle.tsx
client/src/components/cards/: ServerCard.tsx
client/src/containers/: Layout.tsx  Main.tsx
client/src/icons/: index.ts
client/src/pages/: 404.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Settings.tsx  index.tsx
client/src/pages/Servers/: Server.tsx  Servers.tsx
client/src/providers/: cookie.ts  index.ts
client/src/router/: index.ts
client/src/routes/: index.ts
client/src/state/: index.ts  themeState.ts  userState.ts
client/src/utils/: form.ts
client/src/views/: Home.vue  Login.vue
crates/controller/: Cargo.toml
crates/controller/migrations/: 20210223055047_users.sql
crates/controller/src/: lib.rs  users.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  logging.rs  utils.rs
crates/daemon/: Cargo.toml
crates/daemon/programs/: Cargo.toml
crates/daemon/programs/src/: models.rs
crates/daemon/programs/src/metadata/: models.rs
crates/daemon/programs/src/metadata/models/: actions.rs
crates/daemon/programs/src/metadata/models/actions/: download.rs  move.rs  write.rs
crates/daemon/programs/src/models/: metadata.rs  program.rs  server.rs
crates/daemon/programs/src/models/metadata/: data.rs  run.rs
crates/daemon/programs/src/models/metadata/actions/: download.rs  move.rs  write.rs
crates/daemon/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs  server.rs  user.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  middleware.rs
crates/server/src/api/: users.rs
crates/server/src/api/users/: me.rs
crates/server/src/auth/: login.rs
crates/server/src/middleware/: authentication.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  auth.rs  lib.rs
crates/web/src/api/: servers.rs  users.rs
crates/web/src/api/servers/: root.rs  server.rs
crates/web/src/api/users/: me.rs
crates/web/src/auth/: login.rs  logout.rs
crates/web/src/middleware/: authentication.rs
docs/: book.toml
migrations/: 20210316055704_servers.sql
presets/: minecraft-paper.yml
scripts/: postinstall.sh  preinstall.sh  uninstall.sh
src/: constants.rs  main.rs  subcommands.rs
src/subcommands/: shutdown.rs  start.rs  users.rs
src/subcommands/users/: add.rs  remove.rs
systemd/: ferrispanel.service
