[package]
name = "ferrispanel"
version = "0.1.0"
authors = ["DankDumpster <dev@mtbk.me>"]
edition = "2018"

[workspace]
members = ["crates/*"]

[dependencies]
dialoguer = "0.7"
regex = "1.4"
dotenv = "0.15.0"

core = { path = "crates/core" }

[dependencies.actix-web]
version = "3.3"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]