[package]
name = "database"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
models = { path = "../models" }

[dependencies.sqlx]
version = "0.5.1"
features = ["postgres", "runtime-actix-rustls"]