[package]
name = "core"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"

models = { path = "../models" }
server = { path = "../server" }
controller = { path = "../controller" }