[package]
name = "models"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.9.0"
async-trait = "0.1.42"

[dependencies.sqlx]
version = "0.4"
features = ["postgres", "runtime-actix-rustls"]