[package]
name = "server"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-session = "0.4.0"
actix-files = "0.6.0-beta.2"

[dependencies.sqlx]
version = "0.5.1"
features = ["runtime-actix-rustls"]