[package]
name = "server"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-identity = "0.3.1"
actix-files = "0.5"
actix-service = "1.0"

simple-logging = "2.0.2"
log = "0.4.14"

futures = "0.3.13"
rand = "0.8.3"

serde = "1.0.123"
models = { path = "../models" }
core = { path = "../core" }

[dependencies.sqlx]
version = "0.4"
features = ["runtime-actix-rustls"]